[gd_scene load_steps=11 format=2]

[ext_resource path="res://files/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/CharacterCreationPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/gui icons/up.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/gui icons/up-press.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/gui icons/up-hl.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/gui icons/down.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/gui icons/down-press.png" type="Texture" id=7]
[ext_resource path="res://assets/images/gui/gui icons/down-hl.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/gui icons/growth_factor.png" type="Texture" id=9]
[ext_resource path="res://assets/images/raceshades/Scylla_F.png" type="Texture" id=10]

[node name="CharacterCreation" type="Panel"]
margin_left = 50.0
margin_top = 28.0
margin_right = 1876.0
margin_bottom = 1025.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 38.3467
margin_top = 40.8278
margin_right = 382.347
margin_bottom = 285.828
custom_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 344.0
margin_bottom = 24.0
text = "SLAVEPARTNAME"
align = 1

[node name="name" type="LineEdit" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 344.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 40 )
placeholder_text = "SLAVEPARTNAME"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 344.0
margin_bottom = 100.0
text = "SLAVEPARTSURNAME"
align = 1

[node name="surname" type="LineEdit" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 344.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 40 )
placeholder_text = "Surname"

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 344.0
margin_bottom = 176.0
text = "SLAVEPARTNICKNAME"
align = 1

[node name="nickname" type="LineEdit" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 344.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 40 )
placeholder_text = "Optional"
placeholder_alpha = 0.5

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 344.0
margin_bottom = 252.0
text = "SLAVEPARTSEX"
align = 1

[node name="sex" type="OptionButton" parent="VBoxContainer"]
margin_top = 258.0
margin_right = 344.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 50 )
text = "SLAVEPARTSEX"

[node name="Label5" type="Label" parent="VBoxContainer"]
margin_top = 314.0
margin_right = 344.0
margin_bottom = 338.0
text = "SLAVEPARTAGE"
align = 1

[node name="age" type="OptionButton" parent="VBoxContainer"]
margin_top = 344.0
margin_right = 344.0
margin_bottom = 394.0
rect_min_size = Vector2( 0, 50 )
text = "Age"

[node name="Label6" type="Label" parent="VBoxContainer"]
margin_top = 400.0
margin_right = 344.0
margin_bottom = 424.0
text = "SLAVEPARTRACE"
align = 1

[node name="race" type="Button" parent="VBoxContainer"]
margin_top = 430.0
margin_right = 344.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 50 )
text = "Race"

[node name="Label7" type="Label" parent="VBoxContainer"]
margin_top = 486.0
margin_right = 344.0
margin_bottom = 510.0
text = "SLAVEPARTSEXTRAIT"
align = 1

[node name="sextrait" type="Button" parent="VBoxContainer"]
margin_top = 516.0
margin_right = 344.0
margin_bottom = 566.0
rect_min_size = Vector2( 0, 50 )

[node name="bodyparts" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 447.0
margin_top = 21.0
margin_right = 749.0
margin_bottom = 737.0

[node name="skin_label" type="Label" parent="bodyparts"]
margin_right = 302.0
margin_bottom = 24.0
text = "SLAVEPARTSKIN"
align = 1

[node name="skin" type="OptionButton" parent="bodyparts"]
margin_top = 28.0
margin_right = 302.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 40 )

[node name="hair_length_label" type="Label" parent="bodyparts"]
margin_top = 72.0
margin_right = 302.0
margin_bottom = 96.0
text = "SLAVEPARTHAIR_LENGTH"
align = 1

[node name="hair_length" type="OptionButton" parent="bodyparts"]
margin_top = 100.0
margin_right = 302.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 40 )

[node name="hair_color_label" type="Label" parent="bodyparts"]
margin_top = 144.0
margin_right = 302.0
margin_bottom = 168.0
text = "SLAVEPARTHAIR_COLOR"
align = 1

[node name="hair_color" type="OptionButton" parent="bodyparts"]
margin_top = 172.0
margin_right = 302.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 40 )

[node name="eye_color_label" type="Label" parent="bodyparts"]
margin_top = 216.0
margin_right = 302.0
margin_bottom = 240.0
text = "SLAVEPARTEYE_COLOR"
align = 1

[node name="eye_color" type="OptionButton" parent="bodyparts"]
margin_top = 244.0
margin_right = 302.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 40 )

[node name="eye_shape_label" type="Label" parent="bodyparts"]
margin_top = 288.0
margin_right = 302.0
margin_bottom = 312.0
text = "SLAVEPARTEYE_SHAPE"
align = 1

[node name="eye_shape" type="OptionButton" parent="bodyparts"]
margin_top = 316.0
margin_right = 302.0
margin_bottom = 356.0
rect_min_size = Vector2( 0, 40 )

[node name="ears_label" type="Label" parent="bodyparts"]
margin_top = 360.0
margin_right = 302.0
margin_bottom = 384.0
text = "SLAVEPARTEARS"
align = 1

[node name="ears" type="OptionButton" parent="bodyparts"]
margin_top = 388.0
margin_right = 302.0
margin_bottom = 428.0
rect_min_size = Vector2( 0, 40 )

[node name="horns_label" type="Label" parent="bodyparts"]
margin_top = 432.0
margin_right = 302.0
margin_bottom = 456.0
text = "SLAVEPARTHORNS"
align = 1

[node name="horns" type="OptionButton" parent="bodyparts"]
margin_top = 460.0
margin_right = 302.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 40 )

[node name="tail_label" type="Label" parent="bodyparts"]
margin_top = 504.0
margin_right = 302.0
margin_bottom = 528.0
text = "SLAVEPARTTAIL"
align = 1

[node name="tail" type="OptionButton" parent="bodyparts"]
margin_top = 532.0
margin_right = 302.0
margin_bottom = 572.0
rect_min_size = Vector2( 0, 40 )

[node name="wings_label" type="Label" parent="bodyparts"]
margin_top = 576.0
margin_right = 302.0
margin_bottom = 600.0
text = "SLAVEPARTWINGS"
align = 1

[node name="wings" type="OptionButton" parent="bodyparts"]
margin_top = 604.0
margin_right = 302.0
margin_bottom = 644.0
rect_min_size = Vector2( 0, 40 )

[node name="height_label" type="Label" parent="bodyparts"]
margin_top = 648.0
margin_right = 302.0
margin_bottom = 672.0
text = "SLAVEPARTHEIGHT"
align = 1

[node name="height" type="OptionButton" parent="bodyparts"]
margin_top = 676.0
margin_right = 302.0
margin_bottom = 716.0
rect_min_size = Vector2( 0, 40 )

[node name="bodyparts2" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 827.0
margin_top = 21.0
margin_right = 1105.0
margin_bottom = 737.0

[node name="penis_size_label" type="Label" parent="bodyparts2"]
margin_right = 278.0
margin_bottom = 24.0
text = "SLAVEPARTPENIS_SIZE"
align = 1

[node name="penis_size" type="OptionButton" parent="bodyparts2"]
margin_top = 28.0
margin_right = 278.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 40 )

[node name="penis_type_label" type="Label" parent="bodyparts2"]
margin_top = 72.0
margin_right = 278.0
margin_bottom = 96.0
text = "SLAVEPARTPENIS_TYPE"
align = 1

[node name="penis_type" type="OptionButton" parent="bodyparts2"]
margin_top = 100.0
margin_right = 278.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 40 )

[node name="balls_size_label" type="Label" parent="bodyparts2"]
margin_top = 144.0
margin_right = 278.0
margin_bottom = 168.0
text = "SLAVEPARTBALLS_SIZE"
align = 1

[node name="balls_size" type="OptionButton" parent="bodyparts2"]
margin_top = 172.0
margin_right = 278.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 40 )

[node name="tits_size_label" type="Label" parent="bodyparts2"]
margin_top = 216.0
margin_right = 278.0
margin_bottom = 240.0
text = "SLAVEPARTTITS_SIZE"
align = 1

[node name="tits_size" type="OptionButton" parent="bodyparts2"]
margin_top = 244.0
margin_right = 278.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 40 )

[node name="ass_size_label" type="Label" parent="bodyparts2"]
margin_top = 288.0
margin_right = 278.0
margin_bottom = 312.0
text = "SLAVEPARTASS_SIZE"
align = 1

[node name="ass_size" type="OptionButton" parent="bodyparts2"]
margin_top = 316.0
margin_right = 278.0
margin_bottom = 356.0
rect_min_size = Vector2( 0, 40 )

[node name="vaginal_virgin" type="CheckBox" parent="bodyparts2"]
margin_top = 360.0
margin_right = 278.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 40 )
text = "SLAVEPARTVAGINAL_VIRGIN"
clip_text = true

[node name="penis_virgin" type="CheckBox" parent="bodyparts2"]
margin_top = 404.0
margin_right = 278.0
margin_bottom = 444.0
rect_min_size = Vector2( 0, 40 )
text = "SLAVEPARTPENIS_VIRGIN"
clip_text = true

[node name="anal_virgin" type="CheckBox" parent="bodyparts2"]
margin_top = 448.0
margin_right = 278.0
margin_bottom = 488.0
rect_min_size = Vector2( 0, 40 )
text = "SLAVEPARTANAL_VIRGIN"
clip_text = true

[node name="StatsContainer" type="HBoxContainer" parent="."]
margin_left = 25.0
margin_top = 743.0
margin_right = 877.0
margin_bottom = 933.0

[node name="Button" type="Panel" parent="StatsContainer"]
visible = false
self_modulate = Color( 1, 0.0352941, 0.0352941, 1 )
margin_right = 100.0
margin_bottom = 190.0
rect_min_size = Vector2( 100, 150 )

[node name="up" type="TextureButton" parent="StatsContainer/Button"]
margin_left = 28.0001
margin_top = 73.0001
margin_right = 68.0001
margin_bottom = 113.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="down" type="TextureButton" parent="StatsContainer/Button"]
margin_left = 28.0001
margin_top = 143.0
margin_right = 68.0001
margin_bottom = 183.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="icon" type="TextureRect" parent="StatsContainer/Button"]
margin_left = 29.4346
margin_top = 11.1974
margin_right = 69.4346
margin_bottom = 51.1974
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="StatsContainer/Button"]
margin_left = 29.1975
margin_top = 118.401
margin_right = 66.1975
margin_bottom = 142.401
text = "1"
align = 1

[node name="name" type="Label" parent="StatsContainer/Button"]
margin_left = 5.01263
margin_top = 53.5988
margin_right = 93.0126
margin_bottom = 77.5988
text = "Growth"
clip_text = true

[node name="descript" type="RichTextLabel" parent="."]
margin_left = 1176.99
margin_top = 27.7593
margin_right = 1790.99
margin_bottom = 724.759
bbcode_enabled = true

[node name="totalstatlabel" type="Label" parent="."]
margin_left = 191.988
margin_top = 954.445
margin_right = 620.988
margin_bottom = 984.445

[node name="RaceSelection" type="Panel" parent="."]
editor/display_folded = true
visible = false
self_modulate = Color( 0.741176, 0, 0, 1 )
margin_left = 533.186
margin_top = 38.3706
margin_right = 1363.19
margin_bottom = 834.371

[node name="ScrollContainer" type="ScrollContainer" parent="RaceSelection"]
margin_left = 27.7925
margin_top = 27.4965
margin_right = 376.792
margin_bottom = 691.497

[node name="VBoxContainer" type="VBoxContainer" parent="RaceSelection/ScrollContainer"]
margin_right = 348.999
size_flags_horizontal = 3

[node name="Button" type="Button" parent="RaceSelection/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 349.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="RaceSelection"]
self_modulate = Color( 1, 1, 1, 0.407843 )
margin_left = 418.0
margin_top = 51.0
margin_right = 793.0
margin_bottom = 688.0
texture = ExtResource( 10 )
stretch_mode = 7

[node name="RichTextLabel" type="RichTextLabel" parent="RaceSelection"]
margin_left = 420.0
margin_top = 45.4481
margin_right = 797.0
margin_bottom = 729.448
text = "This
Is
A 
Test
Text 
"

[node name="TraitSelection" type="Panel" parent="."]
visible = false
self_modulate = Color( 0.741176, 0, 0, 1 )
margin_left = 715.0
margin_top = 32.0
margin_right = 1127.0
margin_bottom = 828.0

[node name="ScrollContainer" type="ScrollContainer" parent="TraitSelection"]
margin_left = 28.0
margin_top = 27.0
margin_right = 377.0
margin_bottom = 755.0

[node name="VBoxContainer" type="VBoxContainer" parent="TraitSelection/ScrollContainer"]
margin_right = 349.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="TraitSelection/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 349.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true

[node name="ConfirmButton" type="Button" parent="."]
margin_left = 1528.02
margin_top = 908.67
margin_right = 1795.02
margin_bottom = 968.67
text = "CONFIRM"
